Fix horizontal scrolling bug and alignment on Vitals and Medications tables.

--- a/src/containers/DataOutputModal/DataOutputModal.css
+++ b/src/containers/DataOutputModal/DataOutputModal.css
@@ -34,5 +34,4 @@
   align-items: flex-start;
   display: flex;
   flex-direction: column;
-  justify-content: center;
 }
